kustomize/deployment dependency on cm/kustomize-static-cm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: web
  template:
    metadata:
      labels:
        tier: web
    spec:
      containers:
      - name: nginx
        image: maciejnowak/nginx-env-vars:1.0.0
        ports:
        - name: web-app-port
          containerPort: 80
        volumeMounts:
        - name: html-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-content
        emptyDir: {}
      - name: html-content-as-cm
        configMap:
          name: nginx-html-folder
          items:
          - key: index.html
            path: index.html
