kustomize/deployment dependency on cm/kustomize-static-cm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    tier: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: web-app-port
